--- a/style.css
+++ b/style.css
@@ -387,6 +387,21 @@
     font-family: 'Lato', sans-serif;
   }
 
+  #smb {
+    width: 100%;
+    padding: 10px 0;
+    background: transparent;
+    border: 1px solid #d3d3d3;
+    font-size: 10px;
+    font-weight: 600;
+    color: #67798e;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .bs-speak {
+    display: none;
+  }
+
   /* ... sponsors .....  */
 
   .spon {
@@ -943,11 +958,11 @@
     border-bottom: 3px solid #ec5242;
   }
 
-  .speak {
+  .bs-speak {
     padding: 40px 200px;
   }
 
-  .pro-1 {
+  .bs-pro-1 {
     color: #272a31;
     font-size: 20px;
     font-family: 'Lato', sans-serif;
@@ -956,66 +971,70 @@
     text-align: center;
   }
 
-  .pro-1::after {
+  .bs-pro-1::after {
     content: "";
     display: block;
     margin: 0 auto;
-    width: 40%;
+    width: 2%;
     padding-top: 1rem;
     border-bottom: 2px solid #ec5242;
   }
 
-  .guestscontainer {
+  .bs-guestscontainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
   }
 
-  .guests {
+  .bs-guests {
     display: flex;
     width: 90%;
     gap: 80px;
     margin-bottom: 30px;
   }
 
-  .firstDiv {
+  .bs-firstDiv {
     display: flex;
     gap: 15px;
     justify-content: center;
     align-items: center;
   }
 
-  .imgs-2 {
+  .bs-imgs-2 {
     width: 110px;
     height: 110px;
     border-radius: 3px;
   }
 
-  .secHand {
+  .bs-secHand {
     display: flex;
     flex-direction: column;
     gap: 5px;
   }
 
-  #secHand {
+  #bs-secHand {
     color: #272a31;
     font-family: 'Lato', sans-serif;
     font-weight: 800;
     font-size: 20px;
   }
 
-  .redText {
+  .bs-redText {
     color: #ec5242;
     font-size: 15px;
     font-family: 'Lato', sans-serif;
     font-style: italic;
   }
 
-  .blackText {
+  .bs-blackText {
     color: #272a31;
     font-weight: 600;
     font-size: 12px;
     font-family: 'Lato', sans-serif;
+  }
+
+  .speak {
+    display: none;
   }
 
   .spon {
